--- a/src/index.jade
+++ b/src/index.jade
@@ -30,6 +30,15 @@ html(lang="ru")
 					.spots__item-layer.layer(data-depth='2.00')
 				.spots__item.spots__item_9.parallax-spot-js
 					.spots__item-layer.layer(data-depth='2.00')
+		.rays#rays-js
+			.rays__item.rays__item-right.rays__item_1(data-top='0')
+				img.rays__img(src='img/rays.png')
+			.rays__item.rays__item-left.rays__item_2(data-top='1654')
+				img.rays__img.rays__img_left(src='img/rays.png')
+			.rays__item.rays__item-right.rays__item_3(data-top='3634')
+				img.rays__img(src='img/rays.png')
+			.rays__item.rays__item-left.rays__item_4(data-top='5504')
+				img.rays__img.rays__img_left(src='img/rays.png')
 		section.wrapper
 			header.header
 				.header__info.body__table
