Turn off video for iframe in the bxSlider after slide

--- a/src/index.jade
+++ b/src/index.jade
@@ -73,20 +73,22 @@ html(lang="ru")
 						.slider
 							ul.slider__bxslider
 								li
-									.body__video.body__generate-iframe-js(data-width='660', data-height='371', data-src='https://www.youtube.com/embed/iGnnMEVl3qA')
+									.body__video.body__generate-iframe-js(data-width='660', data-height='371', data-src='https://www.youtube.com/embed/iGnnMEVl3qA', data-n='0')
 									br
 									.body__text-blue Шоу на День Рождения
 								li
-									.body__video.body__generate-iframe-js(data-width='660', data-height='371', data-src='https://www.youtube.com/embed/OZ0S7ZAZ9kg')
+									.body__video.body__generate-iframe-js(data-width='660', data-height='371', data-src='https://www.youtube.com/embed/OZ0S7ZAZ9kg', data-n='1')
 									br
 									.body__text-blue Корпоративное мероприятие
 								li
-									.body__video.body__generate-iframe-js(data-width='660', data-height='371', data-src='https://www.youtube.com/embed/n1iS9u5AdKk')
+									.body__video.body__generate-iframe-js(data-width='660', data-height='371', data-src='https://www.youtube.com/embed/n1iS9u5AdKk', data-n='2')
 									br
 									.body__text-blue Свадебное лазерное шоу
 							.slider__nav-button.slider__nav-button_prew#slider__nav-button_prew
 							.slider__nav-button.slider__nav-button_next#slider__nav-button_next
 						br
+						#playYoutube воспроизведение
+						#pauseYoutube пауза
 						.body__text-big Яркие события, о которых говорят с восхищением!
 						br
 						br
