Fallen button with order call

--- a/src/index.jade
+++ b/src/index.jade
@@ -306,7 +306,7 @@ html(lang="ru")
 			.freepopup-c__content
 				.freepopup-c__content-width
 					.freepopup-c__close#freepopup-c__close
-		.order-call-fixed
+		.order-call-fixed#order-call-fixed
 			.order-call-fixed__round-two
 				a.order-call-fixed__round-boder.freepopup(href='#order-call')
 					.order-call-fixed__text.body__text-medium.body__center Заказать звонок!
