--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -27,6 +27,25 @@ $sprite: url('../img/sprite.png')
 		opacity: 0
 	100%
 		opacity: 1
+@keyframes order-call-fixed_animated-1
+	0%
+
+	100%
+		bottom: 25px
+@keyframes order-call-fixed_animated-2
+	0%
+		bottom: 25px
+	50%
+		bottom: 75px
+	100%
+		bottom: 25px
+@keyframes order-call-fixed_animated-3
+	0%
+		bottom: 25px
+	50%
+		bottom: 38px
+	100%
+		bottom: 25px
 
 a
 	color: $white
@@ -603,7 +622,7 @@ h2,
 		text-align: center
 .order-call-fixed
 	position: fixed
-	bottom: 25px
+	bottom: 100%
 	right: 3%
 	background: #00163a
 	width: 210px
@@ -633,3 +652,6 @@ h2,
 	&__text
 		display: table
 		padding-top: 40px
+	&_animated
+		animation: order-call-fixed_animated-1 0.6s linear forwards, order-call-fixed_animated-2 0.4s cubic-bezier(.25,.5,.75,.5) 0.6s forwards, order-call-fixed_animated-3 0.2s cubic-bezier(.25,.5,.75,.5) 1s forwards
+		transition: all 0.6s linear
