empty title for inputs with tipe text and tel

--- a/src/index.jade
+++ b/src/index.jade
@@ -247,11 +247,11 @@ html(lang="ru")
 							.form__text-section
 								.form__text.body__text-big.body__text-blue Ваше имя
 								br
-								input.form__input.body__text-big(type='text', placeholder='Представьтесь', name='NAME', required)
+								input.form__input.body__text-big(type='text', placeholder='Представьтесь', name='NAME', required, title=' ')
 							.form__text-section
 								.form__text.body__text-big.body__text-blue Ваш номер телефона
 								br
-								input.form__input.body__text-big.form__input-phone-js(type='tel', name='PHONE', placeholder='+7 ( _ _ _ ) _ _ _ - _ _ - _ _', required)
+								input.form__input.body__text-big.form__input-phone-js(type='tel', name='PHONE', placeholder='+7 ( _ _ _ ) _ _ _ - _ _ - _ _', required, title=' ')
 							.form__text-section
 								br
 								br
@@ -283,11 +283,11 @@ html(lang="ru")
 						.form__text-section
 							.form__text.body__text-big.body__text-blue Ваше имя
 							br
-							input.form__input.body__text-big(type='text', placeholder='Представьтесь', name='NAME', required)
+							input.form__input.body__text-big(type='text', placeholder='Представьтесь', name='NAME', required, title=' ')
 						.form__text-section
 							.form__text.body__text-big.body__text-blue Ваш номер телефона
 							br
-							input.form__input.body__text-big.form__input-phone-js(type='tel', name='PHONE', placeholder='+7 ( _ _ _ ) _ _ _ - _ _ - _ _', required)
+							input.form__input.body__text-big.form__input-phone-js(type='tel', name='PHONE', placeholder='+7 ( _ _ _ ) _ _ _ - _ _ - _ _', required, title=' ')
 						.form__text-section
 							br
 							br
