--- a/src/index.jade
+++ b/src/index.jade
@@ -8,6 +8,8 @@ html(lang="ru")
 		meta(name='keywerds', content='')
 		meta(name='description', content='')
 		link(rel='stylesheet', href='css/styles.css')
+		link(rel='icon', href='img/favicon.ico', type='image/x-icon')
+		link(rel='shortcut icon', href='img/favicon.ico', type='image/x-icon')
 		<!-- Ульянкин Виктор -->
 	body.body
 		.spots
