--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -27,25 +27,6 @@ $sprite: url('../img/sprite.png')
 		opacity: 0
 	100%
 		opacity: 1
-@keyframes order-call-fixed_animated-1
-	0%
-
-	100%
-		bottom: 25px
-@keyframes order-call-fixed_animated-2
-	0%
-		bottom: 25px
-	50%
-		bottom: 75px
-	100%
-		bottom: 25px
-@keyframes order-call-fixed_animated-3
-	0%
-		bottom: 25px
-	50%
-		bottom: 38px
-	100%
-		bottom: 25px
 
 a
 	color: $white
@@ -621,8 +602,8 @@ h2,
 		background: black
 		text-align: center
 .order-call-fixed
-	position: fixed
-	bottom: 100%
+	position: absolute
+	top: -210px
 	right: 3%
 	background: #00163a
 	width: 210px
@@ -652,6 +633,3 @@ h2,
 	&__text
 		display: table
 		padding-top: 40px
-	&_animated
-		animation: order-call-fixed_animated-1 0.6s linear forwards, order-call-fixed_animated-2 0.4s cubic-bezier(.25,.5,.75,.5) 0.6s forwards, order-call-fixed_animated-3 0.2s cubic-bezier(.25,.5,.75,.5) 1s forwards
-		transition: all 0.6s linear
